--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "1.0.0",
+    "date-fns": "^1.30.1",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "5.12.0",
@@ -39,6 +40,7 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.5.0",
     "postcss-safe-parser": "4.0.1",
+    "qs": "^6.7.0",
     "react": "^16.8.3",
     "react-app-polyfill": "^0.2.1",
     "react-dev-utils": "^7.0.3",
@@ -68,6 +70,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/qs": "^6.5.3",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
     "typescript": "^3.4.5"
