--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "1.0.0",
-    "date-fns": "^1.30.1",
+    "date-fns": "^2.0.0-alpha.1",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "5.12.0",
@@ -70,9 +70,11 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/jest": "^24.0.14",
     "@types/qs": "^6.5.3",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.4.5"
   },
   "jest": {
@@ -86,7 +88,7 @@
     ],
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,ts,tsx}"
+      "<rootDir>/src/**/?(*.)(spec|test|__tests__).{js,jsx,ts,tsx}"
     ],
     "testEnvironment": "jsdom",
     "testURL": "http://localhost",
@@ -101,7 +103,8 @@
     ],
     "moduleNameMapper": {
       "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy",
+      "^@[/](.+)": "<rootDir>/src/$1"
     },
     "moduleFileExtensions": [
       "web.js",
