--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "workbox-webpack-plugin": "3.6.3"
   },
   "scripts": {
+    "server:local": "nodemon ./server/index.js",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
@@ -79,6 +80,7 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-router": "^5.0.2",
     "@types/react-router-dom": "^4.3.4",
+    "nodemon": "^1.19.1",
     "ts-jest": "^24.0.2",
     "typescript": "^3.4.5"
   },
