Apply babel-node in express server

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "workbox-webpack-plugin": "3.6.3"
   },
   "scripts": {
-    "server:local": "cross-env NODE_ENV=development nodemon --exec babel-node --presets babel-preset-env ./server",
+    "server:local": "cross-env NODE_ENV=development nodemon --exec babel-node ./server",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
@@ -83,6 +83,7 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-router": "^5.0.2",
     "@types/react-router-dom": "^4.3.4",
+    "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.2.0",
     "nodemon": "^1.19.1",
     "ts-jest": "^24.0.2",
