--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.2",
+    "ts-loader": "^6.0.4",
     "url-loader": "1.1.2",
     "webpack": "4.28.3",
     "webpack-dev-server": "3.1.14",
@@ -60,6 +61,8 @@
   },
   "scripts": {
     "server:local": "cross-env NODE_ENV=development nodemon --exec babel-node ./server",
+    "server:dev:build": "cross-env NODE_ENV=development node scripts/server-build.js",
+    "server:build": "rm -rf dist && webpack --mode development --config ./config/webpack.dev.config.js",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
@@ -74,6 +77,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
     "@babel/node": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
@@ -86,8 +90,10 @@
     "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.2.0",
     "nodemon": "^1.19.1",
+    "rimraf": "^2.6.3",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "webpack-cli": "^3.3.5"
   },
   "jest": {
     "collectCoverageFrom": [
