--- a/package.json
+++ b/package.json
@@ -93,7 +93,8 @@
     "rimraf": "^2.6.3",
     "ts-jest": "^24.0.2",
     "typescript": "^3.4.5",
-    "webpack-cli": "^3.3.5"
+    "webpack-cli": "^3.3.5",
+    "webpack-merge": "^4.2.1"
   },
   "jest": {
     "collectCoverageFrom": [
