--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": false
   },
   "include": [
     "**/*"
